[gd_scene format=3 uid="uid://byuun7s17ahy6"]

[ext_resource type="Script" uid="uid://b04nwvo3n2038" path="res://Scripts/Merchants/base_merchant.gd" id="1_jyhg0"]
[ext_resource type="Texture2D" uid="uid://cdr6q6ac2w38h" path="res://Resources/Art/Merchants/karver_merchant.png" id="2_he2fg"]
[ext_resource type="Shader" uid="uid://dme8q462mcrjg" path="res://Shaders/card_selector.gdshader" id="3_hmnk5"]
[ext_resource type="Texture2D" uid="uid://boqov0yviery2" path="res://Resources/Art/UIElements/glow_effect1.png" id="4_i35u0"]
[ext_resource type="PackedScene" uid="uid://tg83lmmkajyp" path="res://Scenes/UI/Tooltips/tooltip_layer.tscn" id="5_hmnk5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wh8by"]
shader = ExtResource("3_hmnk5")
shader_parameter/onoff = 0.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_power = 2.0
shader_parameter/glow_shift = 0.3
shader_parameter/glow_radius = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lt1j"]
size = Vector2(146, 180)

[node name="BaseMerchant" type="Node2D" unique_id=4444233]
script = ExtResource("1_jyhg0")

[node name="MerchantImage" type="Sprite2D" parent="." unique_id=306706017]
unique_name_in_owner = true
texture = ExtResource("2_he2fg")

[node name="BorderImage" type="Sprite2D" parent="." unique_id=1033976020]
unique_name_in_owner = true

[node name="GlowEffect" type="Sprite2D" parent="." unique_id=516024426]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_wh8by")
position = Vector2(-3.09944e-06, 3.72529e-06)
scale = Vector2(1.07692, 1.06316)
texture = ExtResource("4_i35u0")

[node name="Area2D" type="Area2D" parent="." unique_id=1061685943]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1511861759]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_8lt1j")

[node name="MerchantUI" type="Control" parent="." unique_id=2012692439]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -73.0
offset_top = -90.0
offset_right = 73.0
offset_bottom = 90.0

[node name="TooltipLayer" parent="." unique_id=1878210227 instance=ExtResource("5_hmnk5")]
unique_name_in_owner = true
